--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,24 @@
 group 'com.tomrenn.njtrains'
 version '1.0-SNAPSHOT'
 
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "net.ltgt.gradle:gradle-apt-plugin:0.3"
+    }
+}
+
+apply plugin: 'idea'
+apply plugin: 'net.ltgt.apt'
 apply plugin: 'application'
 
+configurations {
+    apt
+}
 mainClassName = 'com.tomrenn.njtrains.caboose.Main'
 
 
@@ -19,6 +35,9 @@ run {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+
+    apt 'com.google.dagger:dagger-compiler:2.0'
+    compile 'com.google.dagger:dagger:2.0'
 
     compile 'com.google.api-client:google-api-client-java6:1.19.0'
     compile 'com.google.http-client:google-http-client-jackson2:1.19.0'
