--- a/build.gradle
+++ b/build.gradle
@@ -21,14 +21,14 @@ configurations {
 }
 mainClassName = 'com.tomrenn.njtrains.caboose.Main'
 
-
-//sourceCompatibility = 1.5
+//sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
 run {
+    println System.getProperty("java.home")
     environment System.properties // pass environment vars
 }
 
@@ -39,10 +39,14 @@ dependencies {
     apt 'com.google.dagger:dagger-compiler:2.0'
     compile 'com.google.dagger:dagger:2.0'
 
+    compile 'com.sparkjava:spark-core:2.2'
+
     compile 'com.google.api-client:google-api-client-java6:1.19.0'
     compile 'com.google.http-client:google-http-client-jackson2:1.19.0'
     compile 'com.google.oauth-client:google-oauth-client-jetty:1.19.0'
     compile 'com.google.apis:google-api-services-storage:v1-rev18-1.19.0'
+
+    compile 'com.google.code.gson:gson:2.3.1'
 
     compile 'io.reactivex:rxjava:1.0.9'
     compile 'com.google.guava:guava:18.0'
