--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ run {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
+    compile "org.slf4j:slf4j-api:1.7.7"    // the SLF4J API
+
     apt 'com.google.dagger:dagger-compiler:2.0'
     compile 'com.google.dagger:dagger:2.0'
 
